modules/gdscript/tests/scripts/analyzer/errors/assign_to_read_only_property_indirectly.gd
func test():
	var state := PhysicsDirectBodyState3DExtension.new()
	state.center_of_mass.x += 1.0
	state.free()
